remove NATIVE_OPTIONS, COMPILE_OPTIONS, RUNTIME_OPTIONS